# nst

./: .gitignore  CMakeLists.txt  docker_env.sh  env.sh  home_env.sh  package.py  readme.txt  todo.txt  work_env.sh
docker/: Singularity  build.sh  build_conda_env.sh  clean_containers.sh  docker_cheats.txt  run.sh
environments/conda/: environment.yml
environments/docker/: Dockerfile  build_docker.sh  docker_cheats.txt  run_jupyter.sh  run_shell.sh
environments/docker/base/: Dockerfile  clean_containers.sh
environments/docker/pytorch-1.1.0_cuda-10.0.130/: run_jupyter.sh  run_shell.sh
environments/docker/pytorch-1.10_cuda-11.3/: Dockerfile
environments/docker/pytorch-1.10_cuda-11.3_torchvision-0.11/: Dockerfile  run_shell.sh
environments/docker/pytorch-1.7.1_cuda-11.0/: Dockerfile  Dockerfile.bak  Dockerfile_cuda-11.0.3_cudnn8_ubuntu20.04  Dockerfile_cuda-11.4.2_cudnn8_ubuntu20.04  Dockerfile_debug  run_jupyter.sh
environments/docker2/: Dockerfile  build_docker.sh  run_shell.sh
environments/docker_pytorch-1.1.0/: Dockerfile  build_docker.sh
environments/nuke/docker/: Dockerfile  build_docker.sh  get-hostname.sh  run-ml-server.sh  run-shell.sh
environments/nuke/singularity/: nst_nuke.def  run-ml-server-pdb.sh  run-ml-server.sh  run-shell.sh
environments/oiio/docker/: Dockerfile  Dockerfile.bak  build_docker.sh  run_nst-notebooks.sh  run_shell.sh
environments/oiio/singularity/: ala_run_jupyter.sh  ala_run_shell.sh  nst_oiio.def
environments/singularity/: Singularity  ala_render.sh  ala_run_jupyter.sh  ala_run_shell.sh  debug.sh  razer_run_jupyter.sh  razer_run_shell.sh  render.sh  singularity_cheats.txt
environments/singularity/pytorch-1.1.0_cuda-10.0.130/: Singularity  ala_run_jupyter.sh  ala_run_shell.sh
environments/singularity/pytorch-1.10_cuda-11.4/: nst.def
environments/singularity/pytorch-1.10_cuda-11.4_kornia/: ala_run_jupyter.sh  build_all.sh  nst.def
environments/singularity/pytorch-1.10_cuda-11.4_torchvision-0.11/: nst.def
environments/singularity/pytorch-1.7.1_cuda-11.0/: Singularity  Singularity_new  Singularity_new2  Singularity_old  ala_run_shell.sh  all.def  base.def  build_all.sh  def  oiio_ocio.def
nuke/: CMakeLists.txt
nuke/gizmos/: nst.gizmo
nuke/ml-client/: CMakeLists.txt  MLClient.cpp
nuke/ml-client-live/: CMakeLists.txt  MLClientComms.cpp  MLClientComms.h  MLClientLive.cpp  MLClientLive.h  MLClientModelManager.cpp  MLClientModelManager.h  messageLive.proto
python/nst/: __init__.py  __init__2.py  __init__4.py  deep_smooth.py  entities.py  farm.py  step.py  step.sh  style_optim.py  utils.py
python/nst/core/: __init__.py  adamv.py  guides.py  guides2.py  loss.py  model.py  settings.py  utils.py  vgg.py
python/nst/farm/: conda.py  nuke_tr.py  setup.py  singularity.py  tr.py
python/nst/nuke/: gizmo.py
python/nst/nuke/environment/docker/: Dockerfile  build_docker.sh
python/nst/nuke/environment/singularity/: ala_run_shell.sh  build_all.sh  nst_nuke.def
python/nst/nuke/server/: messageLive_pb2.3.12.4  messageLive_pb2.py  server.py
python/nst/nuke/server/models/: baseModel.py
python/nst/nuke/server/models/common/: model_builder.py  util.py
python/nst/nuke/server/models/nst/: model.py
python/nst/oiio/: __init__.bak.py  __init__.py  readme.md  temporal_coherence.py  temporal_coherence_old.py  utils.py
python/nst/oiio/environment/docker/: Dockerfile  run_jupyter.sh
python/nst/oiio/environment/singularity/: build_all.sh  nst_oiio.def
python/nst/oiio/farm/: tractor.py
python/nst/settings/: __init__.py
python/nst/temporal_coherence/: __init__.py  mvec.py  utils.py
python/nst/temporal_coherence2/: __init__.py  smoother.py  utils.py
python/nst/usd/: step2.py
python/nst_farm/: __init__.py  batch.py  conda.py  singularity.py  singularity_check.py
python_active/nst/core/: guides.py  loss.py  model.py  readme.md  utils.py  vgg.py
python_active/nst/farm/: tr.py
python_active/nst/nuke/: gizmo.py  readme.md  to do
python_active/nst/nuke/server/: messageLive_pb2.bak  server.py
python_active/nst/nuke/server/models/nst/: model.py
python_active/nst/oiio/: __init__.py  temporal_coherence.py  utils.py
python_active/nst/settings/: __init__.py
python_active/nst/usd/: step.py
